Adopt Java 17 rules from OpenRewrite (#465)
* Adopt Java 17 rules

* fix sonar